@@ -485,7 +485,7 @@ name|di
 operator|.
 name|server
 operator|.
-name|InjectExtraModules
+name|ExtraModules
 import|;
 end_import
 
@@ -654,15 +654,11 @@ operator|.
 name|TESTMAP_PROJECT
 argument_list|)
 annotation|@
-name|InjectExtraModules
+name|ExtraModules
 argument_list|(
-name|extraModules
-operator|=
-block|{
 name|DbSyncModule
 operator|.
 name|class
-block|}
 argument_list|)
 specifier|public
 specifier|abstract
