@@ -91,7 +91,7 @@ name|di
 operator|.
 name|server
 operator|.
-name|InjectExtraModules
+name|ExtraModules
 import|;
 end_import
 
@@ -286,17 +286,13 @@ operator|.
 name|TESTMAP_PROJECT
 argument_list|)
 annotation|@
-name|InjectExtraModules
+name|ExtraModules
 argument_list|(
-name|extraModules
-operator|=
-block|{
 name|CDOReflexiveRelICustomSorterIT
 operator|.
-name|CustomServerCase
+name|GraphSorterModule
 operator|.
 name|class
-block|}
 argument_list|)
 specifier|public
 class|class
@@ -1149,18 +1145,13 @@ name|commitChanges
 argument_list|()
 expr_stmt|;
 block|}
-specifier|protected
+specifier|public
 specifier|static
 class|class
-name|CustomServerCase
+name|GraphSorterModule
 implements|implements
 name|Module
 block|{
-specifier|public
-name|CustomServerCase
-parameter_list|()
-block|{
-block|}
 annotation|@
 name|Override
 specifier|public
