@@ -189,7 +189,7 @@ name|di
 operator|.
 name|server
 operator|.
-name|InjectExtraModules
+name|ExtraModules
 import|;
 end_import
 
@@ -248,17 +248,13 @@ operator|.
 name|MEANINGFUL_PK_PROJECT
 argument_list|)
 annotation|@
-name|InjectExtraModules
+name|ExtraModules
 argument_list|(
-name|extraModules
-operator|=
-block|{
 name|DataContextEntityWithMeaningfulPKAndCustomDbRowOpSorterIT
 operator|.
-name|CustomServerCase
+name|GraphSorterModule
 operator|.
 name|class
-block|}
 argument_list|)
 specifier|public
 class|class
@@ -271,12 +267,6 @@ name|Inject
 specifier|private
 name|DataContext
 name|context
-decl_stmt|;
-annotation|@
-name|Inject
-specifier|private
-name|ServerRuntime
-name|runtime
 decl_stmt|;
 annotation|@
 name|Test
@@ -478,18 +468,13 @@ name|commitChanges
 argument_list|()
 expr_stmt|;
 block|}
-specifier|protected
+specifier|public
 specifier|static
 class|class
-name|CustomServerCase
+name|GraphSorterModule
 implements|implements
 name|Module
 block|{
-specifier|public
-name|CustomServerCase
-parameter_list|()
-block|{
-block|}
 annotation|@
 name|Override
 specifier|public
