@@ -37,18 +37,6 @@ begin_import
 import|import
 name|java
 operator|.
-name|lang
-operator|.
-name|reflect
-operator|.
-name|InvocationTargetException
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
 name|util
 operator|.
 name|ArrayList
@@ -72,10 +60,13 @@ end_comment
 begin_class
 specifier|public
 class|class
-name|ServerCaseExtraModulesProperties
+name|ServerCaseExtraModules
 block|{
 specifier|protected
 name|Class
+argument_list|<
+name|?
+argument_list|>
 index|[]
 name|extraModules
 decl_stmt|;
@@ -103,6 +94,9 @@ decl_stmt|;
 for|for
 control|(
 name|Class
+argument_list|<
+name|?
+argument_list|>
 name|extraModule
 range|:
 name|extraModules
@@ -129,13 +123,7 @@ expr_stmt|;
 block|}
 catch|catch
 parameter_list|(
-name|InstantiationException
-decl||
-name|IllegalAccessException
-decl||
-name|InvocationTargetException
-decl||
-name|NoSuchMethodException
+name|Exception
 name|e
 parameter_list|)
 block|{
@@ -157,6 +145,9 @@ name|void
 name|setExtraModules
 parameter_list|(
 name|Class
+argument_list|<
+name|?
+argument_list|>
 index|[]
 name|extraModules
 parameter_list|)
