@@ -100,9 +100,9 @@ name|Inject
 specifier|protected
 name|Provider
 argument_list|<
-name|ServerCaseExtraModulesProperties
+name|ServerCaseExtraModules
 argument_list|>
-name|extraModulesPropertiesProvider
+name|extraModulesProvider
 decl_stmt|;
 specifier|public
 name|ServerCaseLifecycleManager
@@ -146,8 +146,8 @@ operator|.
 name|class
 argument_list|)
 decl_stmt|;
-name|InjectExtraModules
-name|injectExtraModules
+name|ExtraModules
+name|extraModules
 init|=
 name|testCase
 operator|.
@@ -156,7 +156,7 @@ argument_list|()
 operator|.
 name|getAnnotation
 argument_list|(
-name|InjectExtraModules
+name|ExtraModules
 operator|.
 name|class
 argument_list|)
@@ -186,16 +186,19 @@ name|location
 argument_list|)
 expr_stmt|;
 name|Class
+argument_list|<
+name|?
+argument_list|>
 index|[]
 name|modules
 init|=
-name|injectExtraModules
+name|extraModules
 operator|!=
 literal|null
 condition|?
-name|injectExtraModules
-operator|.
 name|extraModules
+operator|.
+name|value
 argument_list|()
 else|:
 operator|new
@@ -203,7 +206,7 @@ name|Class
 index|[]
 block|{}
 decl_stmt|;
-name|extraModulesPropertiesProvider
+name|extraModulesProvider
 operator|.
 name|get
 argument_list|()
