@@ -2789,14 +2789,14 @@ name|binder
 operator|.
 name|bind
 argument_list|(
-name|ServerCaseExtraModulesProperties
+name|ServerCaseExtraModules
 operator|.
 name|class
 argument_list|)
 operator|.
 name|to
 argument_list|(
-name|ServerCaseExtraModulesProperties
+name|ServerCaseExtraModules
 operator|.
 name|class
 argument_list|)
