@@ -38,6 +38,7 @@ CAY-2784 Remove 'Use Java primitive types' option from dbimport
 CAY-2788 DbImport: Add fallback option for the batch attribute loader
 CAY-2795 Add unit tests for the Json type
 CAY-2802 Upgrade Gradle to 7.6.1
+CAY-2803 Test infrastructure: declarative custom DI modules in ServerCase
 
 Bug Fixes:
 
